# speller

./: .gitignore  CMakeLists.txt  README.md  main.cpp  regex_main.cpp  search_main.cpp
include/speller/: alphabet.hpp  letter.hpp  locale.hpp  utility.hpp  word.hpp
res/: alfabe.txt
src/: alphabet.cpp  letter.cpp  locale.cpp  regex_main.cpp  search_any_main.cpp  search_main.cpp  word.cpp
